sign in後リダイレクトされるように

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 AWS_COGNITO_APP_CLIENT_ID="3h8hb8rpgpp176sh25oa0l6tuc"
 AWS_COGNITO_APP_CLIENT_SECRET="c906vnol6ig7b9pmfk4673em8ibhbt5steb8oteu2fc7dak2vms"
+AWS_COGNITO_USER_POOL_ID="ap-northeast-1_UT4qygfPt"
+AWS_COGNITO_REGION="ap-northeast-1"
+AWS_COGNITO_DOMAIN="ap-northeast-1ut4qygfpt"
