--- a/compose.yaml
+++ b/compose.yaml
@@ -23,6 +23,9 @@ services:
     environment:
       - AWS_COGNITO_APP_CLIENT_ID=${AWS_COGNITO_APP_CLIENT_ID}
       - AWS_COGNITO_APP_CLIENT_SECRET=${AWS_COGNITO_APP_CLIENT_SECRET}
+      - AWS_COGNITO_USER_POOL_ID=${AWS_COGNITO_USER_POOL_ID}
+      - AWS_COGNITO_REGION=${AWS_COGNITO_REGION}
+      - AWS_COGNITO_DOMAIN=${AWS_COGNITO_DOMAIN}
     tty: true
 volumes:
   db-volume:
